--- a/Week 1/Week_1_assignment.ipynb
+++ b/Week 1/Week_1_assignment.ipynb
@@ -140,19 +140,19 @@
    "source": [
     "The next step is to convert the data into the form suitable for processing. In our case, we have downloaded HTML source code from the page, and we need to convert it into plain text.\n",
     "\n",
-    "There are many ways this can be done. We will use the simplest built-in HTMLParser object from Python. We need to subclass the HTMLParser class and define the code that will collect all text inside HTML tags, except <script> and <style> tags."
+    "There are many ways this can be done. We will use the simplest built-in HTMLParser object from Python. We need to subclass the HTMLParser class and define the code that will collect all text inside HTML tags, except **script** and **style** tags."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " What is Machine Learning? Definition, Types, Tools & More | DataCamp Skip to main content EN English Español Português Deutsch Beta Français Beta More Information Found an Error? blogs Blogs Tutorials docs Podcasts Cheat Sheets code-alongs Newsletter Category Category About DataCamp Latest news about our products and team Certification DataCamp Classrooms DataCamp Donates For Business Learner Stories Life at DataCamp Product News Category Technologies Discover content by tools and technology AI Agents Airflow Alteryx Artificial Intelligence AWS Azure Business Intelligence ChatGPT Databricks dbt Docker Excel Flink Generative AI Git Google Cloud Platform Hadoop Java Julia Kafka Kubernetes Large Language Models MongoDB MySQL NoSQL OpenAI PostgreSQL Power BI PySpark Python R Scala Snowflake Spreadsheets SQL Tableau Category Topics Discover content by data science topics AI for Business Big Data Career Services Cloud Data Analysis Data Engineering Data Governance Data Literacy Data Science\n"
+      "  What is Machine Learning? Definition, Types, Tools & More | DataCamp Skip to main content EN English Español Português Deutsch Beta Français Beta More Information Found an Error? blogs Blogs Tutorials docs Podcasts Cheat Sheets code-alongs Newsletter Category Category About DataCamp Latest news about our products and team Certification DataCamp Classrooms DataCamp Donates For Business Learner Stories Life at DataCamp Product News Category Technologies Discover content by tools and technology AI Agents Airflow Alteryx Artificial Intelligence AWS Azure Business Intelligence ChatGPT Databricks dbt Docker Excel Flink Generative AI Git Google Cloud Platform Hadoop Java Julia Kafka Kubernetes Large Language Models MongoDB MySQL NoSQL OpenAI PostgreSQL Power BI PySpark Python R Scala Snowflake Spreadsheets SQL Tableau Category Topics Discover content by data science topics AI for Business Big Data Career Services Cloud Data Analysis Data Engineering Data Governance Data Literacy Data Scienc\n"
      ]
     }
    ],
